<menu xmlns:android="http://schemas.android.com/apk/res/android" 
    	>
	<item
	    android:icon="@drawable/ic_action_learn"
        android:id="@+id/buttonLearn"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/buttonLearn" />
    <item
        android:icon="@drawable/ic_action_test"
        android:id="@+id/buttonTests"
        android:orderInCategory="200"
        android:showAsAction="never"
        android:title="@string/buttonTest"/>
    <item
        android:icon="@drawable/ic_action_progress"
        android:id="@+id/buttonProgress"
        android:orderInCategory="300"
        android:showAsAction="never"
        android:title="@string/buttonProgress"/>
    <item
        android:icon="@drawable/logout"
        android:id="@+id/buttonLogout"
        android:orderInCategory="400"
        android:showAsAction="ifRoom|withText"
        android:title="@string/logout"/>
     <item
        android:icon="@drawable/ic_action_yes"
        android:id="@+id/buttonPlay"
        android:orderInCategory="500"
        android:showAsAction="ifRoom|withText"
        android:title="@string/buttonPlay"/>
      <item
        android:icon="@drawable/ic_action_no"
        android:id="@+id/buttonStop"
        android:orderInCategory="600"
        android:showAsAction="ifRoom|withText"
        android:title="@string/buttonStop"/>

</menu>
