<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/login"
    android:textColor="#000000">
       <!-- Userid  -->
	   		<TextView
	   		   android:textColor="#34C6CD"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/userid" />
	    
	    <EditText android:id="@+id/userid"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:inputType="text"
	         android:textColor="#34C6CD"
	        />
	    
	    <!-- email  -->
	    <TextView
	        android:textColor="#34C6CD"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/email"
	         />
	    
	    <EditText android:id="@+id/email"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:inputType="textEmailAddress"
	         android:textColor="#34C6CD"
	        />
	    
	    <!-- password1  -->
	    <TextView
	        android:textColor="#34C6CD"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/pass"
	         />
	    
	    <EditText android:id="@+id/password1"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:inputType="textPassword"
	         android:textColor="#34C6CD"
	        />
	    
	    <!-- password2  -->
	    <TextView
	        android:textColor="#34C6CD"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/pass" />
	
	    <EditText android:id="@+id/password2"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:inputType="textPassword"
	        android:textColor="#34C6CD"
	        />
	    
	    <Button
	        android:id="@+id/SignupButton"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:onClick="signupButtonClick"
	        android:text="@string/signup" />

</LinearLayout>
