<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/login"
    android:textColor="#000000"
    tools:context=".TestsActivity" >

     <TextView
         android:ellipsize="marquee"
        android:fadingEdge="horizontal"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:marqueeRepeatLimit="marquee_forever"
        android:textColor="#34C6CD"
        android:textSize="15sp"
        android:id="@+id/helloTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="15dp"
        android:text="@string/hello"
         />

    <ToggleButton
        android:id="@+id/toggleButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/fragment_container"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/helloTV"
        android:onClick="onToggleClicked"
        android:textOff="hard"
        android:textOn="easy" />

    <LinearLayout
        android:id="@+id/fragment_container"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/toggleButton1"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >
    </LinearLayout>

    <TextView
        android:id="@+id/textLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/pointTV"
        android:layout_alignBottom="@+id/pointTV"
        android:layout_toLeftOf="@+id/pointTV"
        android:text="@string/points" 
        android:textColor="#34C6CD"
        android:textSize="15sp"
        />

    <TextView
        android:id="@+id/pointTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/toggleButton1"
        android:layout_alignRight="@+id/toggleButton1"
        android:layout_marginRight="32dp"
        android:text="@string/zero"
        android:textColor="#34C6CD"
        android:textSize="15sp" />

</RelativeLayout>